--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-    "version": 2,
-    "name": "portfolio",
-    "builds": [
-       { "src": "./index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/" }
-    ]
+   "version": 2,
+   "name": "portfolio",
+   "builds": [
+     { "src": "./index.js", "use": "@vercel/node" }
+   ],
+   "routes": [
+     { "src": "/(.*)", "dest": "/" }
+   ],
+   "functions": {
+     "api/v1/sendmessage": {
+       "timeout": 15  
+     }
+   }
  }
+ 
